5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1601_1802.log
== TEST (2019-03-25 18:55:22) 
-- CODE:
from math import*
vida = int(input("Digite a vida inicial: "))
d1 = int(input("digite um valor de 1 a 20"))
dano = int((5*d1)**1/2 + pi**d2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dano = int((5*d1)**1/2 + pi**d2/3)
NameError: name 'd2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:56:03) 
-- CODE:
from math import*
vida = int(input("Digite a vida inicial: "))
d1 = int(input("digite um valor de 1 a 20: "))
d2 = int(input("digite um valor de 1 a 20: "))
dano = int((5*d1)**1/2 + pi**d2/3)
print(dano)
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:56:45) 
-- CODE:
from math import*
vida = int(input("Digite a vida inicial: "))
d1 = int(input("digite um valor de 1 a 20: "))
d2 = int(input("digite um valor de 1 a 20: "))
dano = int((5*d1)**(1/2) + pi**(d2/3)
print(dano)
-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:56:58) 
-- CODE:
from math import*
vida = int(input("Digite a vida inicial: "))
d1 = int(input("digite um valor de 1 a 20: "))
d2 = int(input("digite um valor de 1 a 20: "))
dano = int((5*d1)**(1/2) + pi**(d2/3))
print(dano)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:58:05) 
-- CODE:
from math import*
vida = int(input("Digite a vida inicial: "))
d1 = int(input("digite um valor de 1 a 20: "))
d2 = int(input("digite um valor de 1 a 20: "))
dano = int((5*d1)**(1//2) + pi**(d2//3))
print(dano)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:59:27) 
-- CODE:
from math import*
vida = int(input("Digite a vida inicial: "))
d1 = int(input("digite um valor de 1 a 20: "))
d2 = int(input("digite um valor de 1 a 20: "))
dano = int((5*d1)**(1/2) + pi**(d2/3))
final = vida - dano
print(final)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:59:30) 
-- CODE:
from math import*
vida = int(input("Digite a vida inicial: "))
d1 = int(input("digite um valor de 1 a 20: "))
d2 = int(input("digite um valor de 1 a 20: "))
dano = int((5*d1)**(1/2) + pi**(d2/3))
final = vida - dano
print(final)
-- EXECUTION TIME:
0.19593
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
